# france-learn-app

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  new_modes.md  pyproject.toml  railway.toml  test_ai_gen.py  ujednolicenie.md  xD.py
alembic/: env.py
alembic/versions/: 62db9ff3cc1c_initial_migration.py
app/: auth.py  database.py  gamification.py  main.py  models.py  models_en.py
app/import-tlumaczenia/: tlumaczenia_1.csv  tlumaczenia_2.csv
app/improt-fiszki/: today_fiszki.csv
app/routers/: english.py
frontend/: Dockerfile  index.html  package-lock.json  package.json  railway.toml  tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src/components/: AdminRoute.tsx  BadgeDisplay.tsx  Confetti.tsx  FlipCard.tsx  GamifiedHeader.tsx  GamifiedStatusWidget.tsx  KawaiiDecorations.tsx  LanguageSwitcher.tsx  PointsPopup.tsx  ProtectedRoute.tsx  SessionSummary.tsx  StudyCard.tsx  StudyGroupSelector.tsx  SuccessCelebration.tsx  ThemeSwitcher.tsx  WordleModal.tsx
frontend/src/components/admin/: DeleteFillBlankItemDialog.tsx  DeleteFiszkaDialog.tsx  DeleteGroupDialog.tsx  DeleteGuessObjectItemDialog.tsx  DeleteTranslateItemDialog.tsx  FillBlankItemDialog.tsx  FiszkaDialog.tsx  GenerateContentDialog.tsx  GroupDialog.tsx  (+4 more)
frontend/src/context/: LanguageContext.tsx
frontend/src/lib/: api.ts  badges.ts  utils.ts
frontend/src/pages/: Dashboard.tsx  LoginPage.tsx
frontend/src/store/: authStore.ts  languageStore.ts  themeStore.ts  useGamificationStore.ts
frontend/src/types/: group.ts  study.ts
scripts/: reset_db.py
(+42 files in other folders)
